# LunchFinder/Api/swagger.yaml
@@ -7,8 +7,8 @@ paths:
   /api/Tags:
     get:
       tags:
-      - Tag
-      operationId: GetAllTags
+      - Tags
+      operationId: Tags_GetTags
       responses:
         200:
           description: ''
@@ -20,8 +20,8 @@ paths:
                   $ref: '#/components/schemas/Tag'
     post:
       tags:
-      - Tag
-      operationId: CreateTag
+      - Tags
+      operationId: Tags_PostTag
       requestBody:
         x-name: tag
         content:
@@ -31,7 +31,7 @@ paths:
         required: true
         x-position: 1
       responses:
-        201:
+        200:
           description: ''
           content:
             application/json:
@@ -40,8 +40,8 @@ paths:
   /api/Tags/{id}:
     get:
       tags:
-      - Tag
-      operationId: GetTagById
+      - Tags
+      operationId: Tags_GetTag
       parameters:
       - name: id
         in: path
@@ -57,19 +57,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tag'
-        404:
-          description: ''
     put:
       tags:
-      - Tag
-      summary: with SUmmary
-      description: returns Description
-      operationId: PutApiTags
+      - Tags
+      operationId: Tags_PutTag
       parameters:
       - name: id
         in: path
         required: true
-        description: this is an id
         schema:
           type: integer
           format: int32
@@ -80,206 +75,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Tag'
-        required: true
-        x-position: 2
-      responses:
-        200:
-          description: ''
-        404:
-          description: ''
-    delete:
-      tags:
-      - Tag
-      operationId: DeleteTag
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int32
-        x-position: 1
-      responses:
-        200:
-          description: ''
-        404:
-          description: ''
-  /api/Place:
-    get:
-      tags:
-      - Place
-      operationId: GetAllPlaces
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Place'
-    post:
-      tags:
-      - Place
-      operationId: CreatePlace
-      requestBody:
-        x-name: place
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Place'
-        required: true
-        x-position: 1
-      responses:
-        201:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Place'
-  /api/Place/{id}:
-    get:
-      tags:
-      - Place
-      operationId: GetPlaceById
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int32
-        x-position: 1
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Place'
-        404:
-          description: ''
-    put:
-      tags:
-      - Place
-      operationId: UpdatePlace
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int32
-        x-position: 1
-      requestBody:
-        x-name: place
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Place'
-        required: true
-        x-position: 2
-      responses:
-        200:
-          description: ''
-        404:
-          description: ''
-    delete:
-      tags:
-      - Place
-      operationId: DeletePlace
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int32
-        x-position: 1
-      responses:
-        200:
-          description: ''
-        404:
-          description: ''
-  /api/Addresses:
-    get:
-      tags:
-      - Addresses
-      operationId: Addresses_GetAddressAll
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Address'
-    post:
-      tags:
-      - Addresses
-      operationId: Addresses_PostAddress
-      requestBody:
-        x-name: address
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Address'
-        required: true
-        x-position: 1
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Address'
-  /api/Addresses/{id}:
-    get:
-      tags:
-      - Addresses
-      summary: Get Address
-      operationId: Addresses_GetAddress
-      parameters:
-      - name: id
-        in: path
-        required: true
-        description: Address id
-        schema:
-          type: integer
-          format: int32
-        x-position: 1
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Address'
-        404:
-          description: The specified employee does not exist, or the current user does not have access to it.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-    put:
-      tags:
-      - Addresses
-      operationId: Addresses_PutAddress
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int32
-        x-position: 1
-      requestBody:
-        x-name: address
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Address'
         required: true
         x-position: 2
       responses:
@@ -292,8 +87,8 @@ paths:
                 format: binary
     delete:
       tags:
-      - Addresses
-      operationId: Addresses_DeleteAddress
+      - Tags
+      operationId: Tags_DeleteTag
       parameters:
       - name: id
         in: path
@@ -323,74 +118,3 @@ components:
           type: string
         description:
           type: string
-    Place:
-      type: object
-      additionalProperties: false
-      properties:
-        id:
-          type: integer
-          format: int32
-        name:
-          type: string
-        description:
-          type: string
-        tags:
-          type: array
-          items:
-            $ref: '#/components/schemas/Tag'
-        address:
-          $ref: '#/components/schemas/Address'
-        contactInformation:
-          type: array
-          nullable: true
-          items:
-            $ref: '#/components/schemas/ContactInformation'
-    Address:
-      type: object
-      additionalProperties: false
-      properties:
-        id:
-          type: integer
-          format: int32
-        street:
-          type: string
-        city:
-          type: string
-        number:
-          type: string
-        postalCode:
-          type: string
-        country:
-          type: string
-    ContactInformation:
-      type: object
-      additionalProperties: false
-      properties:
-        id:
-          type: integer
-          format: int32
-        description:
-          type: string
-        value:
-          type: string
-    ProblemDetails:
-      type: object
-      additionalProperties:
-        nullable: true
-      properties:
-        type:
-          type: string
-          nullable: true
-        title:
-          type: string
-          nullable: true
-        status:
-          type: integer
-          format: int32
-          nullable: true
-        detail:
-          type: string
-          nullable: true
-        instance:
-          type: string
-          nullable: true
