# LunchFinder/Server/Places/PlacesController.cs
@@ -1,0 +1,107 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+using Microsoft.AspNetCore.Http;
+using Microsoft.AspNetCore.Mvc;
+using Microsoft.EntityFrameworkCore;
+using LunchFinder.Server.Data;
+
+namespace LunchFinder.Server.Places
+{
+    [Route("api/[controller]")]
+    [ApiController]
+    public class PlacesController : ControllerBase
+    {
+        private readonly LunchFinderServerContext _context;
+
+        public PlacesController(LunchFinderServerContext context)
+        {
+            _context = context;
+        }
+
+        // GET: api/Places
+        [HttpGet]
+        public async Task<ActionResult<IEnumerable<Place>>> GetPlaces()
+        {
+            return await _context.Places.ToListAsync();
+        }
+
+        // GET: api/Places/5
+        [HttpGet("{id}")]
+        public async Task<ActionResult<Place>> GetPlace(int id)
+        {
+            var place = await _context.Places.FindAsync(id);
+
+            if (place == null)
+            {
+                return NotFound();
+            }
+
+            return place;
+        }
+
+        // PUT: api/Places/5
+        // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
+        [HttpPut("{id}")]
+        public async Task<IActionResult> PutPlace(int id, Place place)
+        {
+            if (id != place.Id)
+            {
+                return BadRequest();
+            }
+
+            _context.Entry(place).State = EntityState.Modified;
+
+            try
+            {
+                await _context.SaveChangesAsync();
+            }
+            catch (DbUpdateConcurrencyException)
+            {
+                if (!PlaceExists(id))
+                {
+                    return NotFound();
+                }
+                else
+                {
+                    throw;
+                }
+            }
+
+            return NoContent();
+        }
+
+        // POST: api/Places
+        // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
+        [HttpPost]
+        public async Task<ActionResult<Place>> PostPlace(Place place)
+        {
+            _context.Places.Add(place);
+            await _context.SaveChangesAsync();
+
+            return CreatedAtAction("GetPlace", new { id = place.Id }, place);
+        }
+
+        // DELETE: api/Places/5
+        [HttpDelete("{id}")]
+        public async Task<IActionResult> DeletePlace(int id)
+        {
+            var place = await _context.Places.FindAsync(id);
+            if (place == null)
+            {
+                return NotFound();
+            }
+
+            _context.Places.Remove(place);
+            await _context.SaveChangesAsync();
+
+            return NoContent();
+        }
+
+        private bool PlaceExists(int id)
+        {
+            return _context.Places.Any(e => e.Id == id);
+        }
+    }
+}
