# LunchFinder/Server/Tags/AddressesController.cs
@@ -1,119 +1,0 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Threading.Tasks;
-using Microsoft.AspNetCore.Http;
-using Microsoft.AspNetCore.Mvc;
-using Microsoft.EntityFrameworkCore;
-using LunchFinder.Server.Data;
-using LunchFinder.Server.Places;
-
-namespace LunchFinder.Server.Tags
-{
-    using System.Net;
-    using System.Net.Mime;
-    using Swashbuckle.AspNetCore.Annotations;
-
-    [Route("api/[controller]")]
-    [ApiController]
-    public class AddressesController : ControllerBase
-    {
-        private readonly LunchFinderServerContext _context;
-
-        public AddressesController(LunchFinderServerContext context)
-        {
-            _context = context;
-        }
-
-        // GET: api/Addresses
-        [HttpGet]
-        public async Task<ActionResult<IEnumerable<Address>>> GetAddress()
-        {
-            return await _context.Address.ToListAsync();
-        }
-
-        /// <summary>
-        /// Get Address
-        /// </summary>
-        /// <description>test description</description>
-        /// <param name="id">Address id</param>
-        /// <response code="404">The specified employee does not exist, or the current user does not have access to it.</response>
-        [HttpGet("{id}")]
-        [ProducesResponseType(StatusCodes.Status200OK)]
-        [ProducesResponseType(StatusCodes.Status404NotFound)]
-        public async Task<ActionResult<Address>> GetAddress(int id)
-        {
-            var address = await _context.Address.FindAsync(id);
-
-            if (address == null)
-            {
-                return NotFound();
-            }
-            
-            return address;
-        }
-
-        // PUT: api/Addresses/5
-        // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
-        [HttpPut("{id}")]
-        public async Task<IActionResult> PutAddress(int id, Address address)
-        {
-            if (id != address.Id)
-            {
-                return BadRequest();
-            }
-
-            _context.Entry(address).State = EntityState.Modified;
-
-            try
-            {
-                await _context.SaveChangesAsync();
-            }
-            catch (DbUpdateConcurrencyException)
-            {
-                if (!AddressExists(id))
-                {
-                    return NotFound();
-                }
-                else
-                {
-                    throw;
-                }
-            }
-
-            return NoContent();
-        }
-
-        // POST: api/Addresses
-        // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
-        [HttpPost]
-        public async Task<ActionResult<Address>> PostAddress(Address address)
-        {
-            _context.Address.Add(address);
-            await _context.SaveChangesAsync();
-
-            return CreatedAtAction("GetAddress", new { id = address.Id }, address);
-        }
-
-        // DELETE: api/Addresses/5
-        [HttpDelete("{id}")]
-        public async Task<IActionResult> DeleteAddress(int id)
-        {
-            var address = await _context.Address.FindAsync(id);
-            if (address == null)
-            {
-                return NotFound();
-            }
-
-            _context.Address.Remove(address);
-            await _context.SaveChangesAsync();
-
-            return NoContent();
-        }
-
-        private bool AddressExists(int id)
-        {
-            return _context.Address.Any(e => e.Id == id);
-        }
-    }
-}
